# tinypdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tinypdf/: cli.py
