[project]
name = "tinypdf"
version = "1.0.0"
description = "Lightweight CLI tool to compress PDF files using Ghostscript."
readme = "README.md"
authors = [
    { name = "Muhammed Sadik", email = "50425929+mhmdxsadk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "colorama>=0.4.6",
    "prettytable>=3.16.0",
]

[project.scripts]
tinypdf = "tinypdf.cli:TinyPDF.compress"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
